Refactor imports and adjust stream usage in TencentCosDocumentLoader.