@@ -1,23 +1,25 @@
 package dev.langchain4j.data.document.loader.tencent.cos;
 
+import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
+import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
+
 import com.qcloud.cos.COSClient;
 import com.qcloud.cos.ClientConfig;
 import com.qcloud.cos.auth.COSCredentialsProvider;
-import com.qcloud.cos.model.*;
+import com.qcloud.cos.model.COSObject;
+import com.qcloud.cos.model.COSObjectSummary;
+import com.qcloud.cos.model.GetObjectRequest;
+import com.qcloud.cos.model.ListObjectsRequest;
+import com.qcloud.cos.model.ObjectListing;
 import com.qcloud.cos.region.Region;
 import dev.langchain4j.data.document.Document;
 import dev.langchain4j.data.document.DocumentLoader;
 import dev.langchain4j.data.document.DocumentParser;
 import dev.langchain4j.data.document.source.tencent.cos.TencentCosSource;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.util.ArrayList;
 import java.util.List;
-
-import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
-import static java.util.stream.Collectors.toList;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TencentCosDocumentLoader {
 
@@ -77,7 +79,7 @@ public class TencentCosDocumentLoader {
 
         List<COSObjectSummary> filteredObjects = objectListing.getObjectSummaries().stream()
                 .filter(object -> !object.getKey().endsWith("/") && object.getSize() > 0)
-                .collect(toList());
+                .toList();
 
         for (COSObjectSummary object : filteredObjects) {
             String key = object.getKey();
@@ -152,6 +154,5 @@ public class TencentCosDocumentLoader {
             ClientConfig clientConfig = new ClientConfig(region);
             return new COSClient(cosCredentialsProvider, clientConfig);
         }
-
     }
 }
